test/files/neg/bug639.scala
import a._
[B]
class C
