test/files/neg/bug639.check
bug639.scala:3: error: not found: value a
import a._
       ^
one error found
